--- a/src/Component/banner.css
+++ b/src/Component/banner.css
@@ -46,62 +46,13 @@ button{
     /* border-radius: 50%; */
    
 }
-.wrapper{
-    display: flex;
-  }
-  .wrapper .static-txt{
-    color: #fff;
-    font-size: 60px;
-    font-weight: 400;
-  }
-  .wrapper .dynamic-txts{
-    margin-left: 15px;
-    height: 90px;
-    line-height: 90px;
-    overflow: hidden;
-  }
-  .dynamic-txts li{
-    list-style: none;
-    color: var(--btn-color);
-    /* font-size: 60px;
-    font-weight: 500; */
-    position: relative;
-    top: 0;
-    animation: slide 12s steps(4) infinite;
-  }
-  @keyframes slide {
-    100%{
-      top: -360px;
-    }
-  }
-  .dynamic-txts li span{
-    position: relative;
-    margin: 5px 0;
-    /* line-height: 90px; */
-  }
-  .dynamic-txts li span::after{
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: var(--primary-color);
-    border-left: 2px solid #FC6D6D;
-    animation: typing 3s steps(10) infinite;
-  }
-  @keyframes typing {
-    40%, 60%{
-      left: calc(100% + 30px);
-    }
-    100%{
-      left: 0;
-    }
-  }
+
 @media screen and (max-width:776px) {
     .banner{
         flex-direction: column-reverse;
         
         text-align: center;
+        margin-top: 10px;
        
       
     
