--- a/src/Pages/project.css
+++ b/src/Pages/project.css
@@ -38,9 +38,14 @@
     
     height: 400px;
     max-width: 300px;
+    transition: transform 0.3s ease-in-out;
    
    
     
+  }
+ 
+.projects-card div:hover {
+    transform: translateY(-15px);
   }
   @media screen and (max-width:992px){
     .projects-card{
