--- a/src/Component/header.css
+++ b/src/Component/header.css
@@ -1,11 +1,20 @@
+
 .menu{
-    color: white !important;
     font-weight: bold;
     font-size: 18px;
+
+}
+.lightMode{
+    color: black !important;
+    
+}
+.darkMode{
+    color:white !important;
+    
 }
 .menu:hover{
     color: var(--btn-color) !important;
 }
-.nav-menu{
+/* .nav-menu{
     background-color: var(--primary-color);
-}
+} */
