--- a/src/Component/banner.css
+++ b/src/Component/banner.css
@@ -1,85 +1,53 @@
-.banner{
-    width: 100%;
-    min-height:80vh;
-    
+.banner {
+  width: 100%;
+  min-height: 80vh;
 }
-.content{
-    max-width:500px;
-    flex-basis: 50%;
-    z-index: 99;
-    
+.content {
+  max-width: 500px;
+  flex-basis: 50%;
+  z-index: 99;
 }
-.img-container{
-    width:350px;
-    height: 350px;
-    z-index: 99;
-    /* position: absolute;
-    top: 0;
-    right: 0;
-    */
-    
+.img-container {
+  width: 300px;
+  height: 300px;
+  z-index: 99;
 }
-.img-container img{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    overflow: hidden;
-    object-fit: cover;
-    animation-name: c;
-    animation-duration: 3s;
-    animation-timing-function: linear;
-    animation-direction: alternate;
-    animation-iteration-count:infinite ;
-    
- 
-}
-@keyframes c{
-    from{transform: rotate();}
-    to{transform: rotate(15deg);}
-}
-button{
-    background-color: var(--btn-color);
-    padding: 10px 20px;
-    border: none;
-    color:white;
-    border-radius: 10px !important; 
-    /* border-radius: 50%; */
-   
+.img-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
 }
 
-@media screen and (max-width:776px) {
-    .banner{
-        flex-direction: column-reverse;
-        
-        text-align: center;
-        margin-top: 10px;
-       
-      
-    
-        
-    }
-    .info{
-        justify-content: center;
-    }
-    .img-container{
-        width: 250px;
-        height: 250px;
-    }
-    
-    
+button {
+  background-color: var(--btn-color);
+  padding: 10px 20px;
+  border: none;
+  color: white;
+  border-radius: 10px !important;
 }
-@media screen and (max-width:992px) {
-    /* .banner{
-        flex-direction: column-reverse;
-        
-        text-align: center;
-       
-      
-    
-        
-    }
-    .info{
-        justify-content: center;
-    } */
-    
+.lightMode {
+  color: black ;
+}
+.darkMode {
+  color: white;
+}
+
+@media screen and (max-width: 776px) {
+  .banner {
+    flex-direction: column-reverse;
+
+    text-align: center;
+    margin-top: 10px;
+  }
+  .info {
+    justify-content: center;
+  }
+  .img-container {
+    width: 250px;
+    height: 250px;
+  }
+}
+@media screen and (max-width: 992px) {
 }
