--- a/src/Component/banner.css
+++ b/src/Component/banner.css
@@ -6,15 +6,40 @@
   width: 100%;
   min-height: 80vh;
 }
+
 .content {
   /* max-width: 600px; */
   flex-basis: 50%;
   z-index: 99;
 }
 .img-container {
-  width: 300px;
-  height: 300px;
-  z-index: 99;
+  
+  animation: morph 8s ease-in-out infinite;
+    background-image: url(/src/assets/photo.jpeg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 3px solid #2d2e32;
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    /* height: 100%; */
+    position: relative;
+    transition: all 1s ease-in-out;
+    /* width: 100%;
+     */
+     width: 350px;
+    height: 350px;
+}
+@keyframes morph{
+  0% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+}
+50% {
+  border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+}
+
+100% {
+  border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+}
 }
 .img-container img {
   width: 100%;
@@ -54,4 +79,9 @@ button {
   }
 }
 @media screen and (max-width: 992px) {
+  .img-container{
+    width: 300px;
+    height: 300px;
+  }
+
 }
