--- a/src/Component/header.css
+++ b/src/Component/header.css
@@ -4,8 +4,15 @@
     font-size: 18px;
 
 }
+.navLight{
+    border-color: black !important;
+    color: black !important;
+
+}
+
 .lightMode{
     color: black !important;
+    
     
 }
 .darkMode{
