--- a/src/Pages/landingpage.css
+++ b/src/Pages/landingpage.css
@@ -22,3 +22,8 @@
       transform: translateY(-10px);
     }
   }
+  @media screen and (max-width: 776px) {
+    .arrow{
+      display: none;
+    }
+  }
